tests/fixtures/positive/supply-chain/version-catalog-duplicate-version/settings.gradle.kts
rootProject.name = "version-catalog-duplicate-version-positive"

include(":app")
