tests/fixtures/negative/supply-chain/version-catalog-duplicate-version/settings.gradle.kts
rootProject.name = "version-catalog-duplicate-version-negative"

include(":app")
